# smartselector

./: LICENSE  README.md  README_RU.md  pyproject.toml
notebooks/: kivy.ipynb  mouse_handler.ipynb  notifier.ipynb  ocr.ipynb  screenshot.ipynb
smartselector/: kivy_app.py  popup.py  selector_v2.py  smart_ocr_tool.py  tkinter_app.py
