[project]
name = "smartselector"
version = "0.1.0"
description = ""
authors = [
    {name = "nikolaev jaroslav",email = "nikolaev.iad@phystech.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "easyocr (>=1.7.2,<2.0.0)",
    "kivy (>=2.3.1,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)",
    "py-notifier (>=0.5.0,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

